don't duplicate large memory usage in SkiaSalBitmap (tdf#134342)

Since SkiaSalBitmap is required to support bitmap formats that
Skia itself doesn't support (1bpp, 4bpp, 24bpp,etc.), it needs
to store its own copy of the bitmap data and convert to SkImage
for use. With huge images this can lead to large duplicated
memory usage. Since the code can actually drop the buffer and
create it if needed (which it normally is not), just drop large
buffers after converting to SkImage.
Ideally SalBitmap should be able to say which bitmap formats it
supports and VCL code should oblige, which would allow reusing
the same data.

Change-Id: I98af62a51dde5d738cc8afcdd2fcdc25ff89952f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99476
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>